lesson23/05-diagnostic-pod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: diagnostics
---
apiVersion: v1
kind: Pod
metadata:
  name: diagnostic-scanner
  namespace: diagnostics
spec:
  serviceAccountName: pod-scanner
  restartPolicy: Never
  containers:
  - name: scanner
    image: busybox:1.36
    command:
    - /bin/sh
    - -c
    - |
      [...]
